derive/tests/ui/attr-invalid-name-values.stderr
error: Invalid attribute parameter(s): 'Xname'. Expected 'name'
  --> $DIR/attr-invalid-name-values.rs:10:2
   |
10 |       /// Returns a protocol version
   |  _____^
11 | |     #[rpc(Xname = "protocolVersion")]
12 | |     fn protocol_version(&self) -> Result<String>;
   | |_________________________________________________^

error: aborting due to previous error

